--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-            <img id="logo" src="imagens/ANA MENDES.png" alt="logo ana mendes">
+            <img id="logo" src="C:\Users\anabe\Desktop\hiring coders\codigos\imagens\ANA MENDES.png" alt="logo ana mendes">
         </div>
         <div>
             <a class="link" target="_blank" href="https://www.linkedin.com/in/anabeatrizdm7/">LinkedIn</a>
