--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div>
-            <img id="logo" src="url(https://anabeatrizzdm.github.io/imagens/primeira-pagina/ANA MENDES.jpg)">
+            <img id="logo" src="url(https://github.com/anabeatrizzdm/primeira-pagina.git/imagens/ANA MENDES.jpg)">
         </div>
         <div>
             <a class="link" target="_blank" href="https://www.linkedin.com/in/anabeatrizdm7/">LinkedIn</a>
